fixed flex layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 *{
   box-sizing: border-box;
+  color: white
 }
+
 img{
+  width: 20px;
+  height: 20px;
+}
+.profilePic{
   border-radius: 50%;
-  width: 60px;
-  height:60px;
+  width: 100px;
+  height:100px;
 }
 h1{
   text-align: center;
@@ -30,15 +36,19 @@ justify-content: center;
   display: flex;
   flex-direction: column;
   gap: 30px;
-  background-color: blue;
+  background-color: rgb(1, 1, 63);
 
 }
 
 .socialsContainer{
   display: flex;
-  background-color: pink;
-  align-content: space-around;
   width: 100%;
+}
+
+.flex-item {
+  flex: 1;
+  width: 20px;
+  height: 20px; 
 }
 
 .links{
@@ -46,7 +56,13 @@ justify-content: center;
   background-color: green;
   display: flex;
   justify-content: start;
-  padding: 5px
+  padding: 5px;
+}
+
+.linksImage{
+  border-radius: 30px;
+  width: 70px;
+  height: 70px;
 }
 
 p{
